--- a/05_R_apply_family/Lecture_5_apply_family.html
+++ b/05_R_apply_family/Lecture_5_apply_family.html
@@ -98,6 +98,10 @@
           </hgroup>
   </slide>
 
+<pre >## Warning: package &#39;ggplot2&#39; was built under R version 3.3.3</pre>
+
+<pre >## Warning: package &#39;ggExtra&#39; was built under R version 3.3.3</pre>
+
 <slide class=''><hgroup><h2>Today&#39;s Agenda</h2></hgroup><article  id="todays-agenda" class="smaller ">
 
 <ul>
@@ -157,7 +161,7 @@
 
 <p>Free course: <a href='https://www.udacity.com/course/data-analysis-with-r--ud651' title=''>https://www.udacity.com/course/data-analysis-with-r&#8211;ud651</a></p>
 
-<p>&quot;Exploratory data analysis is an approach for summarizing and visualizing the important characteristics of a data set. Promoted by <em>John Tukey</em>, exploratory data analysis focuses on exploring data to understand the data’s underlying structure and variables, to develop intuition about the data set, to consider how that data set came into existence, and to decide how it can be investigated with more formal statistical methods.&quot;</p>
+<p>&quot;Exploratory data analysis is an approach for summarizing and visualizing the important characteristics of a data set. Promoted by <em>John Tukey</em>, exploratory data analysis focuses on exploring data to understand the data? underlying structure and variables, to develop intuition about the data set, to consider how that data set came into existence, and to decide how it can be investigated with more formal statistical methods.&quot;</p>
 
 <p>Velleman, Paul and Hoaglin, David (1981), The ABC&#39;s of EDA: Applications, Basics, and Computing of Exploratory Data Analysis, Duxbury.</p>
 
